--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97fd8f">  <td>18/06/22 14:23:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.SearchProduct@2f943d71]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@455538610</td>   <td></td> </tr>
-<tr bgcolor="97fd8f">  <td>18/06/22 14:22:15</td>   <td>-85319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.SearchProduct@2f943d71]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@455538610</td>   <td></td> </tr>
-<tr bgcolor="8486a3">  <td>18/06/22 14:22:46</td>   <td>-54662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProduct.testingScript()[pri:0, instance:Scripts.SearchProduct@2f943d71]">testingScript</td> 
-  <td>main@455538610</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:11:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.AddProducttoCart@3dfc5fb8]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:11:34</td>   <td>30535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.ChangePassword@467aecef]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:12:53</td>   <td>110011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.SharePinCode@4d50efb8]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:13:43</td>   <td>159690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.RemoveProductfromCart@7e2d773b]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:15:00</td>   <td>237146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.RemoveProductfromWishList@2173f6d9]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:15:51</td>   <td>287852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.CheckNotification@307f6b8c]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:16:01</td>   <td>298406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.CheckProductinWishlist@7a187f14]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:16:57</td>   <td>354192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.AddProductWishlist@6f195bc3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:17:17</td>   <td>373482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.CheckProductInCart@51e2adc7]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:18:17</td>   <td>434082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:Scripts.SearchProduct@1a8a8f7c]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:10:10</td>   <td>-53167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.AddProducttoCart@3dfc5fb8]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:11:05</td>   <td>2126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.ChangePassword@467aecef]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:11:36</td>   <td>32679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.SharePinCode@4d50efb8]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:12:55</td>   <td>112364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.RemoveProductfromCart@7e2d773b]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:13:43</td>   <td>160073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.RemoveProductfromWishList@2173f6d9]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:15:02</td>   <td>239250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.CheckNotification@307f6b8c]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:15:52</td>   <td>288471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.CheckProductinWishlist@7a187f14]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:16:04</td>   <td>300710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.AddProductWishlist@6f195bc3]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:16:57</td>   <td>354255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.CheckProductInCart@51e2adc7]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b8a0b8">  <td>18/06/25 17:17:19</td>   <td>375669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:Scripts.SearchProduct@1a8a8f7c]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="8486a3">  <td>18/06/25 17:10:26</td>   <td>-36947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProducttoCart.testingScript()[pri:0, instance:Scripts.AddProducttoCart@3dfc5fb8]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="7aa9ba">  <td>18/06/25 17:11:17</td>   <td>14297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ChangePassword.testingScript()[pri:0, instance:Scripts.ChangePassword@467aecef]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="d176f7">  <td>18/06/25 17:11:50</td>   <td>46496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SharePinCode.testingScript()[pri:0, instance:Scripts.SharePinCode@4d50efb8]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="fe8984">  <td>18/06/25 17:13:07</td>   <td>123582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveProductfromCart.testingScript()[pri:0, instance:Scripts.RemoveProductfromCart@7e2d773b]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="6c91b2">  <td>18/06/25 17:15:14</td>   <td>251116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckNotification.testingScript()[pri:0, instance:Scripts.CheckNotification@307f6b8c]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="b494a6">  <td>18/06/25 17:16:01</td>   <td>297929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductinWishlist.testingScript()[pri:0, instance:Scripts.CheckProductinWishlist@7a187f14]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="ef909d">  <td>18/06/25 17:16:16</td>   <td>312439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductWishlist.testingScript()[pri:0, instance:Scripts.AddProductWishlist@6f195bc3]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>18/06/25 17:17:15</td>   <td>371644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckProductInCart.testingScript()[pri:0, instance:Scripts.CheckProductInCart@51e2adc7]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>18/06/25 17:17:32</td>   <td>389248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProduct.testingScript()[pri:0, instance:Scripts.SearchProduct@1a8a8f7c]">testingScript</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
+<tr bgcolor="bc65a6">  <td>18/06/25 17:13:57</td>   <td>173577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoveProductfromWishList.testingScripts()[pri:0, instance:Scripts.RemoveProductfromWishList@2173f6d9]">testingScripts</td> 
+  <td>main@1693847660</td>   <td></td> </tr>
 </table>
